# ai_leetcode_documentation_generator

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  render.yaml  requirements.txt
backend/: gemini_service.py  serializers.py  urls.py  views.py
frontend/static/: app.js  style.css
frontend/templates/: index.html
leetcode_ai/: settings.py  urls.py  wsgi.py
leetcode_ai/settings/: base.py  dev.py  prod.py
