[project]
name = "leetcode-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.5",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "google-generativeai>=0.8.6",
    "gunicorn>=26.0.0",
    "python-dotenv>=1.2.2",
]
